--- a/pages/storage/view/view.wxss
+++ b/pages/storage/view/view.wxss
@@ -1,7 +1,10 @@
 /* pages/storage/view/view.wxss */
-view{overflow: visible !important;}
+view{overflow: auto !important;}
 page{height: 100%;}
-swiper{min-height: 1020rpx;}
+swiper.swiper-container{min-height: 1020rpx;}
+.overflowYauto{overflow-y: auto !important;}
+.hid-txt-two{overflow: hidden !important; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;}
+.hid-txt-one{overflow: hidden !important; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical;}
 .swiper-tab{display: flex; width: 100%;border-bottom: 2rpx solid #ccc;text-align: center;height: 88rpx;line-height: 88rpx;}
 .swiper-tab-item{flex: 1; color: #bcbcbc;}
 .active{color:#93291f; position: relative;}
@@ -27,8 +30,8 @@ swiper{min-height: 1020rpx;}
 .storage-enviroment .storage-name-box image{width: 30rpx; height: 30rpx; margin: 0 10rpx;}
 .storage-enviroment .storage-name-box .storage-name{color: #999900; font-size: 28rpx;}
 .enviroment-data-box{flex: 75%; height: 100%; background-color: #d7d7d7; display: flex; align-items: center; justify-content: space-around;}
-.enviroment-data-box .icon-temperature{width: 26rpx; height: 48rpx; margin-right: 10rpx;}
-.enviroment-data-box .icon-humidity{width: 26rpx; height: 38rpx; margin-right: 10rpx;}
+.enviroment-data-box .icon-temperature{width: 50rpx; height: 50rpx;}
+.enviroment-data-box .icon-humidity{width: 50rpx; height: 50rpx;}
 .enviroment-data-box  .enviroment-item{display: flex; align-items: center;}
 .enviroment-item .temperature{font-size: 28rpx; color: #D81E06;}
 .enviroment-item .humidity{font-size: 28rpx; color: #66CC00;}
@@ -39,6 +42,7 @@ swiper{min-height: 1020rpx;}
 .item-left .display-img{width: 120rpx; height: 120rpx;}
 .item-left .tea-name{font-size: 36rpx; font-weight: bold; color: #797979;}
 .item-left .tea-date{font-size: 24rpx; color: #333;}
+.item-left .tag-box{padding: 10rpx 0;}
 .item-left .tag-box .tag-text{font-size: 24rpx; color: #999900; border: 1px solid #999900; padding: 4rpx 10rpx; border-radius: 8rpx;}
 .item-left .tag-box .tag-text:first-of-type{margin-right: 8rpx;}
 .item-right{flex-basis: 65%;}
@@ -46,15 +50,45 @@ swiper{min-height: 1020rpx;}
 .tea-stock .stock-title{font-size: 24rpx; font-weight: 700; color: #000;}
 .tea-stock .stock-num{font-size: 44rpx; font-weight: 700; color: #93291E;}
 .tea-stock .stock-more{font-size: 24rpx; color: #0099FF;}
-.exchange-price{background-color: #f2f2f2;}
+.exchange-price{background-color: #f2f2f2; margin-bottom: 20rpx;}
 .exchange-price text{font-size: 24rpx; color: #6b6b6b;}
 .exchange-price text.out-price{color: #D81E06;}
 .exchange-price>view{display: flex; justify-content: space-between; align-items: center; margin-bottom: 16rpx;}
 .out-storage{background-color: #00bbff; color: #fff; height: 70rpx; line-height: 70rpx; font-size: 32rpx;}
 
-
-
-
-
+/* 众筹 */
+.swiper-box{background-color: #000; box-sizing: border-box; height: 400rpx;}
+.swiper-title{text-align: center; color: #fff; font-size: 32rpx; padding: 20rpx 0;}
+.zc-swiper swiper-item{text-align: center; height: initial !important;}
+.zc-swiper swiper-item .box{width: 90%; height: 250rpx; background-color: #fff; display: inline-block; box-sizing: border-box; padding: 36rpx 12rpx; display: inline-flex; justify-content: space-between;}
+.zc-swiper .wx-swiper-dot{width: 40rpx; display: inline-flex; height: 10rpx; margin-left: 20rpx; justify-content: space-between;}
+.zc-swiper .wx-swiper-dot::before{content: ''; background-color: #757575; flex-grow: 1; border-radius: 8rpx;}
+.zc-swiper .wx-swiper-dot-active::before{background-color: #fff;}
+.box .swiper-img-box{width: 180rpx; height: 180rpx; margin-right: 20rpx;}
+.box .swiper-img-box image{width: 100%; height: 100%;}
+.box .swiper-good-info{flex: 1;}
+.box .swiper-good-info .swiper-stock{text-align: right; font-size: 24rpx; color: #333; margin-bottom: 14rpx;}
+.box .swiper-good-info .swiper-desc{font-size: 26rpx; color: #949494; text-align: left; margin-bottom: 14rpx;}
+.box .swiper-good-info .swiper-button{text-align: right;}
+.swiper-good-info .swiper-button button{display: inline-block; width: 150rpx; height: 50rpx; background-color: #d53106; color: #fff; font-size: 28rpx; border-radius: 0; box-sizing: border-box; line-height: 50rpx;}
+.switch-project .switch-btn{width: 300rpx; height: 50rpx; margin: 30rpx auto; border: 2rpx solid #868686; text-align: center; line-height: 40rpx; border-radius: 30rpx; box-sizing: border-box;}
+.switch-project .switch-btn image{width: 32rpx; height: 32rpx; vertical-align: middle; margin-right: 30rpx;}
+.switch-project .switch-btn text{font-size: 26rpx; color: #868686;}
+.switch-project .switch-now{border-color: #D53109}
+.switch-project .switch-now text{color: #D53109;}
+.project-title{padding: 0 20rpx; font-size: 36rpx; font-weight: 700;}
+.zc-item-box{padding: 0 20rpx;}
+.zc-item{display: flex; justify-content: space-between; padding: 30rpx 0; border-bottom: 1px solid #eee;}
+.zc-item .left-img{width: 230rpx; height: 230rpx; margin-right: 20rpx;}
+.zc-item .left-img image{width: 100%; height: 100%;}
+.zc-item .right-project-info{flex: 1;}
+.wxzx-progress{display: inline-block; margin-right: 16rpx;}
+.percent-num{font-size: 30rpx; color: #aeaeae; vertical-align: middle;}
+.right-project-info .project-name{font-size: 30rpx; color: #333; margin-bottom: 20rpx;}
+.right-project-info .project-people{font-size: 26rpx; color: #aeaeae; margin: 20rpx 0 40rpx;}
+.right-project-info .project-price text{font-size: 36rpx; color: #b50000;}
+.right-project-info .project-price button{width: 150rpx; height: 50rpx; text-align: center; box-sizing: border-box; font-size: 26rpx; float: right; line-height: 50rpx; padding: 0; border-radius: 0;}
+.right-project-info .project-price .join-project{background-color: #D53109; color: #fff;}
+.right-project-info .project-price .check-project{border: 1px solid #D53109; color: #D53109; background-color: transparent;}
 
 
