--- a/storage/pages/out_of_warehouse/out_of_warehouse.wxss
+++ b/storage/pages/out_of_warehouse/out_of_warehouse.wxss
@@ -1,1 +1,33 @@
 /* storage/pages/out_of_warehouse/out_of_warehouse.wxss */
+view{overflow: initial;}
+page{background-color: #fff;}
+.header{display: flex; align-items: center; justify-content: space-around; padding: 20rpx; border-bottom: 10rpx solid #f2f2f2;}
+.header .tea-img-box{width: 80rpx; height: 80rpx;}
+.header .tea-img-box image{width: 100%; height: 100%;}
+.header .tea-name{font-size: 28rpx; color: #797979; font-weight: 700;}
+.header .tea-date{font-size: 24rpx; color: #333; letter-spacing: 0;}
+.header .stock-addr{font-size: 20rpx; color: #999900; border-radius: 6rpx; border: 2rpx solid #999900; padding: 4rpx 10rpx;}
+.real-time-stock{width: 300rpx; height: 110rpx; border: 2rpx solid #821006; border-radius: 6rpx; overflow: hidden;}
+.real-time-stock .real-time-title{background-color: #821006; font-size: 24rpx; color: #fff; text-align: center; padding: 8rpx 0;}
+.real-time-stock .stock-box{font-size: 24rpx; color: #811006; text-align: center; line-height: 60rpx;}
+.real-time-stock .stock-num{color: #fff; font-size: 26rpx; background-color: #811006; border-radius: 4rpx; padding: 4rpx 12rpx; border-radius: 6rpx;}
+.icon-more{width: 14rpx; height: 24rpx; margin-left: 10rpx;}
+.stock-container{display: flex; align-items: center;}
+.list-item{display: flex; align-items: center; justify-content: space-between; padding: 20rpx; border-bottom: 10rpx solid #f2f2f2;}
+.list-item .list-key{font-size: 26rpx; font-weight: 700; color: #00a0e6;}
+.list-item .list-key .explain{display: inline-block; width: 30rpx; height: 30rpx; text-align: center; line-height: 30rpx; border-radius: 50%; background-color: #bbb; color: #fff; margin-left: 6rpx; font-size: 24rpx;}
+.list-item .list-value{font-size: 26rpx; color: #333;}
+.list-item .list-value.price{color: #CD300E;}
+.list-item .list-value radio{vertical-align: sub;}
+.list-item .list-value input{text-align: right;}
+.btn{background-color: #ff6700; color: #fff; width: 95%;}
+.agreement{font-size: 28rpx; margin: 20rpx 0 40rpx; padding: 0 20rpx;}
+.agreement checkbox{box-sizing: border-box;}
+.agreement text{color: #00A0E6; font-weight: 700;}
+
+
+
+
+
+
+
