--- a/pages/storage/view/view.wxss
+++ b/pages/storage/view/view.wxss
@@ -1,7 +1,7 @@
 /* pages/storage/view/view.wxss */
 view{overflow: auto !important;}
 page{height: 100%;}
-swiper.swiper-container{min-height: 1020rpx;}
+swiper.swiper-container{height: 93%;}
 .overflowYauto{overflow-y: auto !important;}
 .hid-txt-two{overflow: hidden !important; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;}
 .hid-txt-one{overflow: hidden !important; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 1; -webkit-box-orient: vertical;}
