--- a/storage/pages/realtime_data/realtime_data.wxml
+++ b/storage/pages/realtime_data/realtime_data.wxml
@@ -14,7 +14,11 @@
     <swiper-item class="overflowYauto">
         <view>
             <view class="humiture-data">
-                <view class="time">北京时间：{{beijingTime}}</view>
+                <view class="time">
+                    <text class="humiture-title">北京时间：</text>
+                    {{beijingTime}}
+                </view>
+                <view ></view>
             </view>
         </view>
     </swiper-item>
