--- a/storage/pages/out_of_warehouse/out_of_warehouse.wxss
+++ b/storage/pages/out_of_warehouse/out_of_warehouse.wxss
@@ -18,7 +18,7 @@ page{background-color: #fff;}
 .list-item .list-key .explain{display: inline-block; width: 30rpx; height: 30rpx; text-align: center; line-height: 30rpx; border-radius: 50%; background-color: #bbb; color: #fff; margin-left: 6rpx; font-size: 24rpx;}
 .list-item .list-value{font-size: 26rpx; color: #333;}
 .list-item .list-value.price{color: #CD300E;}
-.list-item .list-value radio{vertical-align: sub;}
+.list-item .list-value radio{vertical-align: middle;}
 .list-item .list-value input{text-align: right;}
 .btn{background-color: #ff6700; color: #fff; width: 95%;}
 .agreement{font-size: 28rpx; margin: 20rpx 0 40rpx; padding: 0 20rpx;}
