--- a/pages/after_sales/after_sales.wxml
+++ b/pages/after_sales/after_sales.wxml
@@ -1,42 +1,45 @@
-<view class="all" style='height:{{height}}px;'>
-	<view class='title'>
-		<view class="title_list {{tab==1? 'on' : ''}}" data-current="1" bindtap="tab_click">全部</view>
-		<view class="title_list {{tab==2? 'on' : ''}}" data-current="2" bindtap="tab_click">申请中</view>
-		<view class="title_list {{tab==3? 'on' : ''}}" data-current="3" bindtap="tab_click">已撤销</view>
-		<view class="title_list {{tab==4? 'on' : ''}}" data-current="4" bindtap="tab_click">已完成</view>
+<view class="wrapper">
+	<view class="swiper-tab">
+		<view class="swiper-tab-item {{currentTab==0?'active':''}}" data-current="0" bindtap="clickTab">全部</view>
+		<view class="swiper-tab-item {{currentTab==1?'active':''}}" data-current="1" bindtap="clickTab">申请中</view>
+		<view class="swiper-tab-item {{currentTab==2?'active':''}}" data-current="2" bindtap="clickTab">已撤销</view>
+		<view class="swiper-tab-item {{currentTab==3?'active':''}}" data-current="3" bindtap="clickTab">已完成</view>
 	</view>
-	<view class='content'>
-		<view class='order_list'>
-			<view >
-				<view class='box_list_one' bindtap="go_order_detail">
-					<view>服务编号:201809145337 </view>
-					<view class='static'>等待买家付款</view>
-				</view>
-				<view class='box_list_two' bindtap="go_order_detail">
-					<view class='img'>
-						<image src='' mode='aspectFill'></image>
+	<swiper class="swiper-container" current="{{currentTab}}" duration="300" bindchange="swiperTab">
+		<swiper-item>
+			<scroll-view class="scroll-items" scroll-y>
+				<view class="item" bindtap="checkDetail">
+					<view class="item-top clearfix">
+						<view class="tb-num fl">服务编号：201903081234</view>
+						<view class="tb-status fr">退款退货成功</view>
 					</view>
-					<view class='good_infor' >
-						<view class='good_name'>商品名称</view>
-						<view class='good_selling'>商品卖点商品卖点商品卖点商品卖点商品卖点商品卖点商品卖点商品……</view>
-						<view class='good_monye'>
-							<view class='good_uite'>
-								<image src='{{url}}{{member_grade_img}}' class='user_img'></image>
-								<text class='uite'>￥50/片</text>
+					<view class="item-mid">
+						<view class="img-box">
+							<image src="/images/img1.png" />
+						</view>
+						<view class="info-box">
+							<view class="tb-name hid-txt-two">商品名称</view>
+							<view class="tb-describe hid-txt-two">
+								商品卖点商品卖点商品卖点商品卖点商品卖点商品卖点商品卖点商品
 							</view>
-							<view class='num'>x1</view>
+							<view class="tb-price clearfix">
+								<view class="price fl">
+									<image src="./img/img1.png" />￥90.0/片
+								</view>
+								<view class="quantity fr">×1</view>
+							</view>
+						</view>
+					</view>
+					<view class="item-bot">
+						<view class="total">共1件商品 合计：￥90.0</view>
+						<view class="statustext">
+							<text class="status-text">已完成</text>
+							<text class="status-text">申请中</text>
+							<text class="status-text">已撤销</text>
 						</view>
 					</view>
 				</view>
-				<view class='box_list_three'>
-					<view><text>共1件商品</text><text>合计：￥99</text> </view>
-				</view>
-				<view class='box_list_four'>
-					<view>
-						<view class='cancel' bindtap="cancel_order"  data-id="">已完成</view>
-					</view>
-				</view>
-			</view>
-		</view>
-	</view>
+			</scroll-view>
+		</swiper-item>
+	</swiper>
 </view>
