--- a/aftersale/pages/aftersale_success/aftersale_success.wxml
+++ b/aftersale/pages/aftersale_success/aftersale_success.wxml
@@ -1,26 +1,25 @@
 <view class="wrapper">
-    <view class="status-box">
-        <view class="status-text">
-            <text>请等待商家处理</text>
-            <text>商已拒绝理，您需要及时处理</text>
-            <text>您已成功撤销售后/退款申请</text>
+    <view class="tips">
+        <view class="tips-item">您已成功发起退款申请，如双方协商确认属实，请将商品寄还回商家，商家获得商品后，查明属实，即可退款；</view>
+        <view class="tips-item">寄还地址：北京市朝阳区天鹅湾小区5号楼3单元201北京市朝阳区天鹅湾小区5号楼3单元201     刘德华   13922830809</view>
+        <view class="tips-btn">
+            <text class="aftersale-finish">确认售后完成</text>
+            <text class="aftersale-revoke">撤销申请</text>
         </view>
-        <view class="time-countdown">还剩余{{countDownTime}}</view>
-        <view class="time-countdown">感谢您的配合与支持！</view>
     </view>
-    <view class="tips-box">
-        <view class="tips-title">
-            <text>您已成功发起退款申请，请耐心等待商家处理</text>
-            <text>平台已拒绝，详情查阅官方回复</text>
+    <view class="express-info">
+        <view class="express-title">填写寄回的快递单号</view>
+        <view class="express-item">
+            <view class="express-key">快递公司</view>
+            <view class="express-value">
+                <input type="text" />
+            </view>
         </view>
-        <view class="tips-list">
-            <view>平台同意后，请按照给出的退货地址退货，并请记录退货运单号</view>
-            <view>如平台拒绝，您可以修改申请后再次发起，商家会重新处理</view>
-            <view>平台超过5个工作日后超时未处理，退货申请将达成，请按系统给的退货地址退货</view>
-        </view>
-        <view class="operation-box">
-            <text>修改申请</text>
-            <text class="revoke">撤销申请</text>
+        <view class="express-item">
+            <view class="express-key">快递单号</view>
+            <view class="express-value">
+                <input type="text" />
+            </view>
         </view>
     </view>
     <view class="refund-info">
@@ -68,4 +67,5 @@
             <view class="apply-btn">我要回复</view>
         </view>
     </view>
+    <button class="confirm">确定</button>
 </view>
