--- a/pages/after_sales/after_sales.wxml
+++ b/pages/after_sales/after_sales.wxml
@@ -1,41 +1,42 @@
 <view class="wrapper">
 	<view class="swiper-tab">
-		<view class="swiper-tab-item {{currentTab==0?'active':''}}" data-current="0" bindtap="clickTab">全部</view>
-		<view class="swiper-tab-item {{currentTab==1?'active':''}}" data-current="1" bindtap="clickTab">申请中</view>
-		<view class="swiper-tab-item {{currentTab==2?'active':''}}" data-current="2" bindtap="clickTab">已撤销</view>
-		<view class="swiper-tab-item {{currentTab==3?'active':''}}" data-current="3" bindtap="clickTab">已完成</view>
+		<block wx:for="{{navNameList}}">
+			<view class="swiper-tab-item {{currentTab==index?'active':''}}" data-current="{{index}}" bindtap="clickTab">{{item}}</view>
+		</block>
 	</view>
 	<swiper class="swiper-container" current="{{currentTab}}" duration="300" bindchange="swiperTab">
-		<swiper-item>
+		<swiper-item wx:for="{{navNameList}}">
 			<scroll-view class="scroll-items" scroll-y>
-				<view class="item" bindtap="checkDetail">
+				<view class="item" bindtap="checkDetail" wx:for="{{dataList}}" data-id="{{item.id}}" data-status="{{item.status}}">
 					<view class="item-top clearfix">
-						<view class="tb-num fl">服务编号：201903081234</view>
-						<view class="tb-status fr">退款退货成功</view>
+						<view class="tb-num fl">服务编号：{{item.sale_order_number}}</view>
+						<view class="tb-status fr">
+							{{item.status==1?'申请中':(item.status==2?'申请中':(item.status==3?'申请中':(item.status==4?'已完成':'已撤销')))}}
+						</view>
 					</view>
 					<view class="item-mid">
 						<view class="img-box">
-							<image src="/images/img1.png" />
+							<image src="https://teahouse.siring.com.cn/uploads/{{item.goods_image}}" />
 						</view>
 						<view class="info-box">
-							<view class="tb-name hid-txt-two">商品名称</view>
+							<view class="tb-name hid-txt-two">{{item.parts_goods_name}}</view>
 							<view class="tb-describe hid-txt-two">
-								商品卖点商品卖点商品卖点商品卖点商品卖点商品卖点商品卖点商品
+								{{item.goods_describe}}
 							</view>
 							<view class="tb-price clearfix">
 								<view class="price fl">
-									<image src="./img/img1.png" />￥90.0/片
+									<image src="./img/img1.png" />￥{{item.goods_money}}/片
 								</view>
-								<view class="quantity fr">×1</view>
+								<view class="quantity fr">×{{item.order_quantity}}</view>
 							</view>
 						</view>
 					</view>
 					<view class="item-bot">
-						<view class="total">共1件商品 合计：￥90.0</view>
+						<view class="total">共{{item.order_quantity}}件商品 合计：￥{{item.refund_amount}}</view>
 						<view class="statustext">
-							<text class="status-text">已完成</text>
-							<text class="status-text">申请中</text>
-							<text class="status-text">已撤销</text>
+							<text class="status-text" wx:if="{{item.status == 1 || item.status == 2 || item.status == 3}}">申请中</text>
+							<text class="status-text" wx:elif="{{item.status == 4}}">已完成</text>
+							<text class="status-text" wx:elif="{{item.status == 5}}">已撤销</text>
 						</view>
 					</view>
 				</view>
