--- a/pages/after_sales/after_sales.wxss
+++ b/pages/after_sales/after_sales.wxss
@@ -8,7 +8,7 @@ page{height: 100%;}
 .wrapper{display: flex; flex-direction: column; height: 100%;}
 swiper.swiper-container{flex: 1;}
 .swiper-container swiper-item,
-.scroll-items{background-color: #f2f2f2;}
+.scroll-items{background-color: #f2f2f2; height: 100%;}
 .swiper-tab{display: flex; width: 100%;border-bottom: 2rpx solid #ccc;text-align: center;height: 88rpx;line-height: 88rpx; background-color: #f2f2f2;}
 .swiper-tab-item{flex: 1; color: #434343; font-size: 32rpx;}
 .active{color:#93291f; position: relative;}
@@ -29,7 +29,7 @@ swiper.swiper-container{flex: 1;}
 .item-mid .tb-price .quantity{font-size: 32rpx; color: #ff2a00;}
 .item-bot .total{text-align: right; font-size: 24rpx; color: #1e1e1e; margin-bottom: 10rpx;}
 .item-bot .statustext{text-align: right;}
-.item-bot .statustext .status-text{font-size: 26rpx; color: #000; border: 2rpx solid #515151; display: inline-block; width: 160rpx; height: 60rpx; line-height: 60rpx; text-align: center; border-radius: 30rpx;}
+.item-bot .statustext .status-text{font-size: 26rpx; color: #000; border: 2rpx solid #515151; display: inline-block; width: 160rpx; height: 50rpx; line-height: 50rpx; text-align: center; border-radius: 30rpx;}
 
 
 
