--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,74 +1,76 @@
-<!--index.wxml-->
+<!-- index.wxml -->
 <import src="../../utils/template.wxml" />
 <view class="container">
-   <view class='title'>
-      <view style='float: left;' bindtap="nfc">
-          <view class="nfc"><image  src="img/u270.png"> </image> </view>
-          <view class='fangwei' >溯源</view>
-      </view>
-      <image src="img/seach.png"  class="seach_img" mode="widthFix" />
-      <input type='text' class='seach' placeholder="请输入"></input>
-       <view style='float: left;' bindtap="bindViewTaps">
-          <view class="ma"><image  src="img/u180.png"> </image> </view>
-          <view class='fangwei'>会员码</view>
-      </view>
-   </view>
+    <view class='title'>
+        <view style='float: left;' bindtap="nfc">
+            <view class="nfc">
+                <image src="img/u270.png"></image>
+            </view>
+            <view class='fangwei'>溯源</view>
+        </view>
+        <image src="img/seach.png" class="seach_img" mode="widthFix" />
+        <input type='text' class='seach' placeholder="请输入"></input>
+        <view style='float: left;' bindtap="bindViewTaps">
+            <view class="ma">
+                <image src="img/u180.png"></image>
+            </view>
+            <view class='fangwei'>会员码</view>
+        </view>
+    </view>
     <view class='home_banner'>
-         <swiper indicator-dots="{{indicatorDots}}"
-              autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" circular="{{circular}}" duration="1000">
-              <block wx:for="{{image}}"  wx:key="{{index}}">
+        <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" circular="{{circular}}" duration="1000">
+            <block wx:for="{{image}}" wx:key="{{index}}">
                 <swiper-item>
-                  <image src="{{item}}" class="slide-image" />
+                    <image src="{{item}}" class="slide-image" />
                 </swiper-item>
-              </block>
-         </swiper>
-
+            </block>
+        </swiper>
     </view>
     <view class='nav-list clear'>
         <view class='list list-one' wx:for="{{nav}}" wx:key="item">
-            <view class='ico nav_ico ico-one'><image src='{{item.url}}'></image></view>
-            <text class='text' >{{item.text}}</text>
-        </view>
-         
-    </view>
-    <view class='new clear' >
-         <image src='{{laba}}' class='news-img'></image>
-      <text style='color:#fff; font-size:24rpx;vertical-align:6rpx;margin-left:37rpx; float:left;'>通知：</text>
-      <view class='news-text'>111111</view>
-      <image src='{{close}}' class='close'></image>
-    </view> 
-    <view class='goods'>
-      <view class='goods-title clear'>
-          <text class='goods-title-text'>商品</text>
-          <view class='more-all' bindtap="go_good">
-              <text class='more'>更多</text>
-              <image src='{{more}}' style='float:right; ' class='more-img'></image>
-          </view>
-      </view>
-      <view class='goods-content'>
-            <view class="weui-grids">
-                    <view class="weui-grid" wx:for="{{routers}}" wx:for-item="item"   wx:key="*this" bindtap="go_gooddetail"  data-id="{{item.id}}">
-                        <template  is="good" data="{{item}}"  bindtap></template> 
-                    </view>
+            <view class='ico nav_ico ico-one'>
+                <image src='{{item.url}}'></image>
             </view>
-      </view>
+            <text class='text'>{{item.text}}</text>
+        </view>
     </view>
-
- <view class='share'>
-      <view class='share-title clear'>
-          <text class='goods-title-text'>推荐</text>
-          <view class='more-all' bindtap="go_meeting">
-              <text class='more'>更多</text>
-              <image src='{{more}}' style='float:right; ' class='more-img'></image>
-          </view>
-      </view>
-      <view class='shares-content'>
-      <view class='listview' wx:for="{{share}}" wx:for-item="item"   wx:key="*this">
-            <template  is="joy-pic" data="{{item}}"  bindtap></template>
-    </view> 
-      </view>
-  
-</view>
-<image class="buy" src="img/buy.png" mode="widthFix" lazy-load="false" binderror="" bindload="" bindtap="go_car"></image>
-
+    <view class='new clear'>
+        <image src='{{laba}}' class='news-img'></image>
+        <text style='color:#fff; font-size:24rpx;vertical-align:6rpx;margin-left:37rpx; float:left;'>
+            通知：
+        </text>
+        <view class='news-text'>111111</view>
+        <image src='{{close}}' class='close'></image>
+    </view>
+    <view class='goods'>
+        <view class='goods-title clear'>
+            <text class='goods-title-text'>商品</text>
+            <view class='more-all' bindtap="go_good">
+                <text class='more'>更多</text>
+                <image src='{{more}}' style='float:right; ' class='more-img'></image>
+            </view>
+        </view>
+        <view class='goods-content'>
+            <view class="weui-grids">
+                <view class="weui-grid" wx:for="{{routers}}" wx:for-item="item" wx:key="*this" bindtap="go_gooddetail" data-id="{{item.id}}">
+                    <template is="good" data="{{item}}" bindtap></template>
+                </view>
+            </view>
+        </view>
+    </view>
+    <view class='share'>
+        <view class='share-title clear'>
+            <text class='goods-title-text'>推荐</text>
+            <view class='more-all' bindtap="go_meeting">
+                <text class='more'>更多</text>
+                <image src='{{more}}' style='float:right; ' class='more-img'></image>
+            </view>
+        </view>
+        <view class='shares-content'>
+            <view class='listview' wx:for="{{share}}" wx:for-item="item" wx:key="*this">
+                <template is="joy-pic" data="{{item}}" bindtap></template>
+            </view>
+        </view>
+    </view>
+    <image class="buy" src="img/buy.png" mode="widthFix" lazy-load="false" binderror="" bindload="" bindtap="go_car"></image>
 </view>
