--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -12,7 +12,8 @@
   text-align:center;
   font-size:26rpx;
   padding:10rpx;
-  line-height:60rpx;
+  line-height:40rpx;
+  margin-top: 16rpx;
   
 
 }
