--- a/aftersale/pages/aftersale_detail/aftersale_detail.wxss
+++ b/aftersale/pages/aftersale_detail/aftersale_detail.wxss
@@ -35,8 +35,12 @@
 .reply-items .user-apply{font-size: 28rpx; color: #018BE6; margin: 10rpx 0;}
 .reply-items .user-apply text{color: #949494;}
 .apply-btn{font-size: 26rpx; color: #018BE6; text-align: right; margin-bottom: 20rpx;}
-
-
+.reply-container{position: absolute; left: 0; bottom: 0; width: 100%; height: 90rpx; padding: 0 30rpx; box-sizing: border-box; display: none; align-items: center; justify-content: space-between; background-color: #fafafa;}
+.reply-container .reply-btn-box{width: 200rpx; text-align: right;}
+.reply-container .reply-btn-box text{color: #018BE6; font-size: 32rpx;}
+.reply-container .reply-btn-box text:last-of-type{margin-left: 20rpx;}
+.reply-container .reply-input{background-color: #fff; height: 85%; flex: 1; border-radius: 8rpx; margin-right: 10rpx;}
+.show-reply{display: flex;}
 
 
 
