--- a/pages/order_detail/order_detail.wxml
+++ b/pages/order_detail/order_detail.wxml
@@ -1,30 +1,57 @@
 <!--pages/order_detail/order_detail.wxml-->
 <view class="all">
- <view class="address">
-     <image src="img/u6095.png" mode="widthFix"  class="address_ico"/>
-     <view class="address_content">
-         <view class="name_phone">
-             <text class="name">刘德华 </text>
-             <text class="phone">13922830809</text>
-         </view>
-         <view class="address_detail">
-            地址：北京市朝阳区天鹅湾小区5号楼3单元201北京市朝阳区天鹅湾小区5号楼3单元201     
-         </view>
-     </view>
- </view>
-<view class="other_infor">
-    <view class="time">
-        <view class="time_title">订单时间</view>
-        <view class="create_time"> 创建时间：2019-01-20 16:54:48</view>
-        <view class="repay_time"> 付款时间：2019-01-20 16:54:48</view>
+<view wx:if="{{order.order_type==1}}">
+    <view class="address">
+        <image src="img/u6095.png" mode="widthFix"  class="address_ico"/>
+        <view class="address_content">
+            <view class="name_phone">
+                <text class="name">{{order.name}} </text>
+                <text class="phone">{{order.phone_num}}</text>
+            </view>
+            <view class="address_detail">
+                地址：{{order.address}}     
+            </view>
+        </view>
     </view>
-    <view class="left">
-            <image class="zy_ico" src="img/u8165.png" mode="widthFix"></image>
-            <text class="zy_text">直邮</text>
+    <view class="other_infor">
+        <view class="time">
+            <view class="time_title">订单时间</view>
+            <view class="create_time"> 创建时间：{{order.create_time}}</view>
+            <view class="repay_time"> 付款时间：{{order.pay_time}}</view>
+        </view>
+        <view class="left">
+                <image class="zy_ico" src="img/u8165.png" mode="widthFix"></image>
+                <text class="zy_text">直邮</text>
+        </view>
+    </view>
+</view>
+<view wx:elif="{{order.order_type==2}}">
+    <view class="address">
+        <image src="img/u6095.png" mode="widthFix"  class="address_ico"/>
+        <view class="address_content">
+            <view class="name_phone">
+                <text class="name">{{order.name}} </text>
+                <text class="phone">{{order.phone_num}}</text>
+            </view>
+            <view class="address_detail">
+                地址：{{order.address}}     
+            </view>
+        </view>
+    </view>
+    <view class="other_infor">
+        <view class="time">
+            <view class="time_title">订单时间</view>
+            <view class="create_time"> 创建时间：{{order.create_time}}</view>
+            <view class="repay_time"> 付款时间：{{order.pay_time}}</view>
+        </view>
+        <view class="left">
+                <image class="zy_ico" src="img/u8165.png" mode="widthFix"></image>
+                <text class="zy_text">直邮</text>
+        </view>
     </view>
 </view>
 <view class="order_informatin">
-    <view class='order_list' wx:for="{{order}}">
+    <view class='order_list' wx:for="{{order.data}}">
         <view wx:if="{{item.status==1}}">
             <view class='box_list_one'>
                 <view>订单编号：{{item.parts_order_number}} </view>
